# AI-Studio

./: .gitattributes  .gitignore  README.md  design-qa.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
docs/superpowers/plans/: 2026-07-12-ai-studio-os-web-prototype.md  2026-07-14-ai-studio-chat-figma-27-2094.md  2026-07-14-ai-studio-seven-pages.md  2026-07-14-desktop-window-responsive.md  2026-07-14-figma-26-773-fidelity.md  2026-07-14-responsive-three-column-layout.md  2026-07-18-duomi-media-api.md
docs/superpowers/specs/: 2026-07-12-ai-studio-os-web-prototype-design.md  (+5 more)
src/: App.test.tsx  App.tsx  development-watcher.test.ts  main.tsx  tauri-window-config.test.ts  vite-env.d.ts  window-chrome.test.tsx  workspace-shell.test.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: auth.rs  commands.rs  gateway.rs  lib.rs  media.rs  models.rs  state.rs  storage.rs
src/app/: navigation.ts
src/bridge/: tauriClient.ts
src/components/: ActionButton.tsx  AppSidebar.tsx  Artwork.tsx  AssetThumbnail.tsx  AuthGate.test.tsx  AuthGate.tsx  ImageGenerationWorkspace.tsx  NavItem.tsx  Panel.tsx  RecentWorkItem.tsx  ReferenceImagePicker.tsx  ResponsiveShell.tsx  ToolCard.tsx  WorkflowStep.tsx
src/pages/: LoginPage.test.tsx  LoginPage.tsx  SettingsPage.test.tsx  SettingsPage.tsx  StudioPages.tsx
src/state/: AuthContext.test.tsx  AuthContext.tsx  PrototypeContext.tsx
src/styles/: app.css  responsive-layout.test.ts  studio-pages.css  tokens.css  typography.test.ts  window-surface.test.ts
src/test/: setup.ts
(+4 files in other folders)
